# worker-control-plane

./: .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
src/worker_control_plane/: __init__.py  app.py  auth.py  capability.py  chain.py  config.py  heartbeat.py
tests/: test_smoke.py
